force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/sugati__Supplier_Payment_Rule__c.object-meta.xml
<CustomObject>
    <description>For None Guarantee Contracts ONLY and Automatically queuing the supplier payment</description>
    <label>Supplier Payment Rule</label>
    <nameField>
        <displayFormat>SPR-{0000000000}</displayFormat>
        <label>Supplier Payment Rule No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Payment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>