force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/fields/sugati__Percent_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__Percent_Value__c</fullName>
    <inlineHelpText>Is the amount percentage or value?</inlineHelpText>
    <label>Percent / Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>