force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/fields/sugati__SPR_Active__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPR_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>