force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/fields/sugati__SPR_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPR_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>