force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/fields/sugati__SPR_Balance_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPR_Balance_Due_Date__c</fullName>
    <inlineHelpText>If payment is due on a specific date, insert date here</inlineHelpText>
    <label>Balance Due Date</label>
    <type>Date</type>
</CustomField>