force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/fields/sugati__SPR_Balance_Due_Day__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPR_Balance_Due_Day__c</fullName>
    <inlineHelpText>+/- number of days</inlineHelpText>
    <label>Balance Due Day</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>