force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/fields/sugati__SPR_Confirmation_From_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPR_Confirmation_From_Date__c</fullName>
    <inlineHelpText>Booking Confirmation From Date</inlineHelpText>
    <label>Confirmation From Date</label>
    <type>Date</type>
</CustomField>