force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/fields/sugati__SPR_Deposit_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPR_Deposit_Due_Date__c</fullName>
    <inlineHelpText>Need to pay at a specific date</inlineHelpText>
    <label>Deposit Due Date</label>
    <type>Date</type>
</CustomField>