force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/fields/sugati__SPR_Deposit_Due_Day__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPR_Deposit_Due_Day__c</fullName>
    <inlineHelpText>+/- Number of days</inlineHelpText>
    <label>Deposit Due Day</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>