force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/fields/sugati__SPR_Deposit_Required__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPR_Deposit_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is Deposit required for this property for the specific date range?</inlineHelpText>
    <label>Deposit Required?</label>
    <type>Checkbox</type>
</CustomField>