force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/fields/sugati__SPR_Max_Duration__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPR_Max_Duration__c</fullName>
    <inlineHelpText>Max duration for the service provided by the supplier for a specific booking</inlineHelpText>
    <label>Max Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>