force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/fields/sugati__SPR_Notify__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPR_Notify__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can we have a &apos;notify accounts&apos; flag (see above) in the payment record. If this is set to yes the system would add this payment to the Accounts Team &apos;tasks&apos; 4 days before the due date i.e. if due 7 days before the service date then it would notify accounts 11 days before.</description>
    <inlineHelpText>When ticked a task will be created for Account Team 4 days before the due date. (Only use if payment is due before the end of a month)</inlineHelpText>
    <label>Notify for Deposit</label>
    <type>Checkbox</type>
</CustomField>