force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/fields/sugati__SPR_Notify_for_Balance__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPR_Notify_for_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When ticked a task will be created for Account Team 4 days before the due date. (Only use if payment is not at the end of a month)</inlineHelpText>
    <label>Notify for Balance</label>
    <type>Checkbox</type>
</CustomField>