force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/fields/sugati__SPR_Rule_Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPR_Rule_Execution_Order__c</fullName>
    <formula>CASE( RecordType.Name, 
      &apos;Deposit&apos;, 1, 
      &apos;Balance&apos;, 2, 
      3
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rule Execution Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>