force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/fields/sugati__SPR_Service_From_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPR_Service_From_Date__c</fullName>
    <inlineHelpText>Service Date Range Start Date</inlineHelpText>
    <label>Service From Date</label>
    <type>Date</type>
</CustomField>