force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/fields/sugati__SPR_Service_To_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPR_Service_To_Date__c</fullName>
    <label>Service To Date</label>
    <type>Date</type>
</CustomField>