force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/fields/sugati__SPR_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPR_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>In the future this may be used for none property based rules such as Transfer and Taxi providers etc..</description>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipName>Supplier_Payment_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>