force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/fields/sugati__SPR_Supplier_Payment_Due_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__SPR_Supplier_Payment_Due_Type__c</fullName>
    <inlineHelpText>When is the payment due?</inlineHelpText>
    <label>Supplier Payment Due Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>At Confirmation</fullName>
            </value>
            <value>
                <fullName>End of Month after Serv Date</fullName>
            </value>
            <value>
                <fullName>Service Date</fullName>
            </value>
            <value>
                <fullName>Specific Date</fullName>
            </value>
            <value>
                <fullName>Supplier Service Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>