force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/recordTypes/sugati__Balance.recordType-meta.xml
<RecordType>
    <fullName>sugati__Balance</fullName>
    <active>true</active>
    <description>Balance</description>
    <label>Balance</label>
</RecordType>