force-app/main/default/objects/sugati__Supplier_Payment_Rule__c/recordTypes/sugati__Deposit.recordType-meta.xml
<RecordType>
    <fullName>sugati__Deposit</fullName>
    <active>true</active>
    <description>Deposit</description>
    <label>Deposit</label>
</RecordType>